entities: now EntityOptions parameter can be null
Signed-off-by: Dmitrii Aleksandrov <goodmobiledevices@gmail.com>

--- a/src/Kirel.Blazor.Entities/EntityDialog.razor
+++ b/src/Kirel.Blazor.Entities/EntityDialog.razor
@@ -8,7 +8,7 @@
         @Content
     </DialogContent>
     <DialogActions>
-        <MudButton hidden="@(Options.Action != EntityAction.Create)" Color="Color.Primary" OnClick="OnCreate">Create</MudButton>
-        <MudButton hidden="@(Options.Action != EntityAction.Edit)" Color="Color.Primary" OnClick="OnUpdate">Update</MudButton>
+        <MudButton hidden="@(Options?.Action != EntityAction.Create)" Color="Color.Primary" OnClick="OnCreate">Create</MudButton>
+        <MudButton hidden="@(Options?.Action != EntityAction.Edit)" Color="Color.Primary" OnClick="OnUpdate">Update</MudButton>
     </DialogActions>
 </MudDialog>
