--- a/src/Kirel.Blazor.Entities/EntityPage.razor
+++ b/src/Kirel.Blazor.Entities/EntityPage.razor
@@ -1,9 +1,8 @@
-﻿@typeparam TCreateDto
-@typeparam TUpdateDto
-@typeparam TDto
+﻿@typeparam TCreateDto where TCreateDto : new()
+@typeparam TUpdateDto where TUpdateDto : new()
+@typeparam TDto where TDto : new()
 @inherits EntityComponentBase<TCreateDto, TUpdateDto, TDto>
 
-
 @Content
-<MudButton hidden="@(Options.Action != EntityAction.Create)" Color="Color.Primary" OnClick="OnCreate">Create</MudButton>
-<MudButton hidden="@(Options.Action != EntityAction.Edit)" Color="Color.Primary" OnClick="OnUpdate">Update</MudButton>
+<MudButton hidden="@(Options?.Action != EntityAction.Create)" Color="Color.Primary" OnClick="OnCreate">Create</MudButton>
+<MudButton hidden="@(Options?.Action != EntityAction.Edit)" Color="Color.Primary" OnClick="OnUpdate">Update</MudButton>
